--- a/hide-message.html
+++ b/hide-message.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <div>
+        <div class="list">
             <div class="pane">
                 <button class="remove-button">[x]</button>
                 <h3>Лошадь</h3>
