--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Learn JS</title>
-        <link rel="stylesheet" href="./css/style.css" />
+        <!-- <link rel="stylesheet" href="./css/style.css" /> -->
+        <style></style>
     </head>
     <body>
         <script src="./index.js" type="module"></script>
